# raytracer

./: .clang-format  .clang-tidy  .clangd  .gitignore  readme.md
src/: CMakeLists.txt  main.cpp
src/Builders/BvhBuilder/: BvhBuilder.cpp  BvhBuilder.hpp  IBvhBuilder.hpp
src/Builders/EnvironmentBuilder/: IEnvironmentBuilder.hpp  RenderEnvironment.hpp
src/Builders/EnvironmentBuilder/JsonEnvironmentBuilder/: JsonEnvironmentBuilder.cpp  (+1 more)
src/Builders/MeshBuilder/: IMeshBuilder.hpp
src/Core/Color/: Color.hpp
src/Core/Math/: Interval.hpp  Numeric.hpp  Point.hpp  Random.hpp  Vector.hpp
src/Core/Ray/: Ray.cpp  Ray.hpp
src/Geometry/Background/: IBackground.hpp
src/Geometry/Hittable/: HitData.hpp  IHittable.hpp
src/Geometry/Light/: ILight.hpp  LightData.hpp
src/Geometry/Material/: IMaterial.hpp
src/Rendering/Framebuffer/: Framebuffer.cpp  Framebuffer.hpp
src/Rendering/Renderer/: IRenderer.hpp  RendererStatistics.hpp
src/Rendering/Writer/: IWriter.hpp
src/Utils/Logger/: ILogger.hpp
src/World/Camera/: Camera.cpp  Camera.hpp  CameraParameters.hpp
src/World/Scene/: Scene.cpp  Scene.hpp
src/modules/Camera/: Camera.cpp  Camera.hpp  CameraParameters.hpp
src/modules/Color/: Color.hpp
src/modules/EnvironmentBuilder/: RenderEnvironment.hpp
src/modules/Framebuffer/: Framebuffer.cpp  Framebuffer.hpp
src/modules/Hittable/: HitData.hpp  IHittable.hpp
src/modules/Math/: Interval.hpp  Numeric.hpp  Point.hpp  Vector.hpp
src/modules/MeshBuilder/: IMeshBuilder.hpp  ObjMeshBuilder.cpp  ObjMeshBuilder.hpp
src/modules/ProgressIndicator/: IProgressIndicator.hpp
src/modules/Ray/: Ray.cpp  Ray.hpp
src/modules/Renderer/: IRenderer.hpp
src/modules/Scene/: Scene.cpp  Scene.hpp
src/modules/Writer/: IWriter.hpp
(+73 files in other folders)
